css/src/_text.scss
// Text variables 
// --------------------------------------------------------------------------

$base-font: Helvetica, Arial, sans-serif; 
$readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', serif;
$base-font-size: 62.5%;
$base-line-height: 1.231; 


/* ==========================================================================
Typography 
(from normalize.css 2012-07-07T09:50 UTC - http://github.com/necolas/normalize.css )
========================================================================== */

/*
* Addresses font sizes and margins set differently.
*/

body { 
   font-family: $base-font; 
   font-size: $base-font-size;
   text-align: center;
}

h1 {
    font-size: 2.3em;
    text-align: center;
    margin: 0.62em 0;
}

h2 {
    font-size: 7em;
    margin: 0.5em 0;
}

h3 {
    font-size: 1.83em;
    margin: 0.67em 0;
}

h4 {
    font-size: 1.5em;
    margin: 1.33em 0;
}

h5 {
    font-size: 0.83em;
    margin: 1.67em 0;
}

h6 {
    font-size: 0.75em;
    margin: 2.33em 0;
}

p {
    font-size: 3em ;
    text-align: justify;
    padding: 1em ;
    line-height: 150%;
    font-family: $readable-font;
    letter-spacing: 0;
}

small {
    font-size: 75%;
}

